Change the colors, add personal images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- page name -->
     <title>Marvin</title>
-
 </head>
 
 <body>
@@ -185,7 +184,7 @@
                 <section class="mil-banner-personal">
 
                     <div class="mil-animation-frame">
-                        <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="7" data-value-2="1.4" style="right: 25%"></div>
+                        <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="7" data-value-2="1.4" style="right: 25%;"></div>
                     </div>
 
                     <div class="container">
@@ -211,7 +210,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mil-portrait-frame">
-                                        <img src="img/faces/large/1.png" alt="Portrait">
+                                        <img src="assets/img/faces/large/hero.png" alt="Portrait">
                                     </div>
                                 </div>
                             </div>
