--- a/project.html
+++ b/project.html
@@ -189,9 +189,9 @@
                         </div>
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="portfolio-1.html">Portfolio</a></li>
-                                <li><a href="project-1.html">Project</a></li>
+                                <li><a href="index.html">Homepage</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="project.html">Project</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Interior Design <span class="mil-thin">Studio</span></h1>
                             <a href="#project" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
@@ -231,27 +231,27 @@
                             <div class="col-lg-7">
 
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="img/works/2/1.gif" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="img/works/2/1.gif" class="mil-zoom-btn">
-                                        <img src="img/icons/zoom.svg" alt="zoom">
+                                    <img src="assets/img/works/2/1.gif" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/1.gif" class="mil-zoom-btn">
+                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="img/works/2/2.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="img/works/2/2.jpg" class="mil-zoom-btn">
-                                        <img src="img/icons/zoom.svg" alt="zoom">
+                                    <img src="assets/img/works/2/2.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/2.jpg" class="mil-zoom-btn">
+                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="img/works/2/3.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="img/works/2/3.jpg" class="mil-zoom-btn">
-                                        <img src="img/icons/zoom.svg" alt="zoom">
+                                    <img src="assets/img/works/2/3.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/3.jpg" class="mil-zoom-btn">
+                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up">
-                                    <img src="img/works/2/4.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="img/works/2/4.jpg" class="mil-zoom-btn">
-                                        <img src="img/icons/zoom.svg" alt="zoom">
+                                    <img src="assets/img/works/2/4.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/4.jpg" class="mil-zoom-btn">
+                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
 
