--- a/publication.html
+++ b/publication.html
@@ -203,7 +203,7 @@
                             <div class="col-lg-12">
 
                                 <div class="mil-image-frame mil-horizontal mil-up">
-                                    <img src="img/blog/3.jpg" alt="Publication cover" class="mil-scale" data-value-1=".90" data-value-2="1.15">
+                                    <img src="assets/img/blog/3.jpg" alt="Publication cover" class="mil-scale" data-value-1=".90" data-value-2="1.15">
                                 </div>
                                 <div class="mil-info mil-up mil-mb-90">
                                     <div>Category: &nbsp;<span class="mil-dark">Technology</span></div>
@@ -234,14 +234,14 @@
                                     <div class="col-lg-6">
 
                                         <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                            <img src="img/blog/4.jpg" alt="Publication cover">
+                                            <img src="assets/img/blog/4.jpg" alt="Publication cover">
                                         </div>
 
                                     </div>
                                     <div class="col-lg-6">
 
                                         <div class="mil-image-frame mil-horizontal mil-up mil-mb-60">
-                                            <img src="img/blog/7.jpg" alt="Publication cover">
+                                            <img src="assets/img/blog/7.jpg" alt="Publication cover">
                                         </div>
 
                                     </div>
@@ -283,7 +283,7 @@
 
                                 <a href="publication.html" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
-                                        <img src="img/blog/8.jpg" alt="cover">
+                                        <img src="assets/img/blog/8.jpg" alt="cover">
                                     </div>
                                     <div class="mil-post-descr">
                                         <div class="mil-labels mil-up mil-mb-30">
@@ -303,7 +303,7 @@
 
                                 <a href="publication.html" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
-                                        <img src="img/blog/1.jpg" alt="cover">
+                                        <img src="assets/img/blog/1.jpg" alt="cover">
                                     </div>
                                     <div class="mil-post-descr">
                                         <div class="mil-labels mil-up mil-mb-30">
@@ -536,7 +536,7 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="assets/"></script>
+    <script src="assets/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
     <script src="assets/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
